css/style.css
/*
* Prefixed by https://autoprefixer.github.io
* PostCSS: v7.0.29,
* Autoprefixer: v9.7.6
* Browsers: last 4 version
*/

/* my V 1.0 global rules */
* {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

a {
  text-transform: capitalize;
  text-decoration: none;
}

button {
  border-color: transparent;
}

ul {
  list-style-type: none;
}

h1 {
  font-size: 48px;
  font-weight: bold;
  line-height: 1.3;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  text-transform: capitalize;
  padding: 15px 5px;
}

.btn {
  border-color: transparent;
  font-size: 14px;
  padding: 7px 20px;
  border-radius: 3px;
  background-color: var(--fg-clr-one);
  color: #fff;
  text-transform: capitalize;
  text-align: center;
  letter-spacing: 2px;
  cursor: pointer;
  -webkit-transition: 0.5s ease-in-out;
  -o-transition: 0.5s ease-in-out;
  transition: 0.5s ease-in-out;
}

.btn:hover {
  color: #fff;
  background-color: var(--bg-clr-btn-hover);
}

:root {
  --fg-clr-one: #1bb1dc;
  --fg-clr-two: #413e66;
  --fg-clr-three: #535074;
  --fg-clr-four: rgb(44, 43, 70);
  --bg-clr-btn-hover: #1593b6;
  --bg-clr-one: #f5f8fd;
}

section {
  padding: 1rem 0;
  margin: 1rem 0;
}

.navbar-center {
  width: 90vw;
  max-width: 1170px;
  margin: 0 auto;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.section-main-text {
  margin: 25px auto;
  width: 50%;
  color: var(--fg-clr-two);
  text-align: center;
}

@media (max-width: 991px) {
  .section-main-text {
    width: 75%;
  }
}

.section-main-text h2 {
  font-weight: 700;
  text-transform: capitalize;
}

.img-container {
  max-width: 100%;
  height: auto;
}

.section-center {
  width: 50%;
  max-width: 1170px;
  text-align: center;
  margin: auto;
}
/* my V 1.0 global rules */

/* start header */

header {
  background-image: url("../img/intro-bg.jpg");
  min-height: 100vh;
  position: relative;
}

/* start navbar */

nav {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 15px 0;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  align-items: center;
}

.nav-white {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  width: 100%;
  -webkit-box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.3);
  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.3);
  background-color: #fff;
  z-index: 1000;
}

.nav-links {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

/* responsive tweaks for navbar section*/

@media (max-width: 991px) {
  .nav-links {
    display: none;
  }

  .nav-white {
    display: none;
  }

  .nav-toggle {
    position: relative;
    top: 20px;
    right: 25px;
    cursor: pointer;
    font-size: 30px;
    color: var(--fg-clr-three);
    z-index: 10000;
  }

  .active.nav-links {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    z-index: 999;
    background-color: var(--fg-clr-two);
  }

  .active.nav-links a {
    font-size: 24px;
    margin: 9px 13px 5px;
    color: #ffffff;
    z-index: 1000;
  }
  .close-links {
    display: none;
  }

  .active.nav-toggle .close-links {
    color: #fff;
    display: inline;
  }

  .active.nav-toggle .open-links {
    display: none;
  }
}

@media (min-width: 992px) {
  .nav-toggle {
    z-index: -1;
  }
}

.nav-white .nav-toggle {
  color: #fff;
}
.nav-links a {
  display: block;
  font-size: 14px;
  margin: 0px 13px;
  padding: 0px;
  color: var(--fg-clr-two);
  font-weight: 600;
  -webkit-transition: 0.5s ease-in-out;
  -o-transition: 0.5s ease-in-out;
  transition: 0.5s ease-in-out;
  text-transform: uppercase;
}

.nav-links a.active,
.nav-links a:hover {
  color: var(--fg-clr-one);
  text-decoration: none;
}
/* end navbar */

body {
  font-family: "Open Sans", sans-serif;
}

.hero {
  min-height: 80vh;
  display: -ms-grid;
  display: grid;
  place-items: center;
}

.hero-text {
  line-height: 1.9;
  text-align: left;
}

.hero-text h1 {
  color: var(--fg-clr-two);
}

.hero-text span {
  color: var(--fg-clr-one);
}

.hero-text button {
  background: var(--fg-clr-one);
  margin: 20px 5px;
}

.hero-text button:hover {
  background-color: var(--bg-clr-btn-hover);
}

/* start about us section */

.about-us h2 {
  color: var(--fg-clr-two);
  font-weight: 700;
  letter-spacing: 1.2px;
}
.about-us i {
  color: var(--fg-clr-one);
}

.about-us p {
  margin-bottom: 35px;
  line-height: 1.8;
}

.about-us li {
  padding: 10px 5px;
}

.about-us img {
  border: 9px solid #faf9f9;
  -webkit-transition: 0.5s ease-in-out;
  -o-transition: 0.5s ease-in-out;
  transition: 0.5s ease-in-out;
}

.about-us img:hover {
  -webkit-transform: scale(1.01);
  -ms-transform: scale(1.01);
  transform: scale(1.01);
}

/* end about us section */

/* services */
.services {
  background-color: var(--bg-clr-one);
}

.services .card {
  background-color: #fff;
  border-radius: 5px;
  text-align: center;
  padding: 15px;
  margin-bottom: 25px;
  cursor: pointer;
  -webkit-box-shadow: 0 10px 29px 0 rgba(68, 88, 144, 0.1);
  box-shadow: 0 10px 29px 0 rgba(68, 88, 144, 0.1);
  -webkit-transition: 0.5s ease-in-out;
  -o-transition: 0.5s ease-in-out;
  transition: 0.5s ease-in-out;
  cursor: pointer;
}

.services .card:hover {
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

.services .card:hover h4 {
  color: var(--fg-clr-three);
}
/* ... */

